# hovercraft

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CONTRIBUTORS.txt  MANIFEST.in  Makefile  README.md  README.rst  hovercraft.css  index.html  run.py  setup.cfg  setup.py
.github/workflows/: syntax.yml  test.yml
.ropeproject/: globalnames
css/: hovercraft.css  impressConsole.css
docs/: Makefile  conf.py  designing.rst  index.rst  introduction.rst  make.bat  manual.rst  presentations.rst  templates.rst  usage.rst
docs/examples/: hovercraft.css  hovercraft.rst  positions.rst  tutorial.css  tutorial.rst
hovercraft/: __init__.py  generate.py  generate_BACKUP_24890.py  generator.py  hovercraft  index.html  main.py  parse.py  position.py  positioner.py  svgparser.py  svgpath.py  template.py  templating.py  tests.py
hovercraft/.ropeproject/: globalnames  objectdb
hovercraft/directive/: null.py
hovercraft/examples/: hovercraft.css  hovercraft.rst  positions.rst  slideshow.rst  test.rst  tutorial.css  tutorial.rst
hovercraft/local_directives/: README.rst  __init__.py  end.xsl  example.__init__.py  example.txt  start.xsl
hovercraft/local_directives/media/: README.rst  __init__.py  media.css  media.js  media.xsl
hovercraft/local_directives/pyembed/: README.rst  __init__.py
hovercraft/templates/: reST.xsl  reST.xsl.orig
hovercraft/templates/default/: template.cfg  template.html  template.xsl  template.xsl.orig  template.xslt
hovercraft/templates/html5/: template-back.cfg  template.xsl
hovercraft/templates/impress1.0.0/: template.cfg  template.xsl
hovercraft/templates/revealjs/: template.cfg  template.xsl
hovercraft/templates/simple/: template.cfg  template.xsl
hovercraft/tests/: test_docs.py  test_generator.py  test_hovercraft.py  test_parse.py  test_path_parsing.py  test_paths.py  test_position.py  test_slidemaker.py  test_template.py
hovercraft/tests/test_data/: __init__.py  advanced.rst  class.rst  comment.rst  container.rst  extra.css  extra.js  include.rst  math.rst  positioning.rst  presenter-notes.rst  simple.rst  slide_class.rst  subdir-css.rst  table.rst
js/: impressConsole.js
tests/: test_docs.py  test_generator.py  test_hovercraft.py  test_parse.py  test_position.py  test_template.py
tests/test_data/: __init__.py  advanced.rst  class.rst  positioning.rst  presenter-notes.rst  slide_class.rst
tests/test_data/css/: sub.css
tests/test_data/maximal/: template.xsl
(+40 files in other folders)
