[metadata]
name = hovercraft
version = 2.8.dev0
description = Makes impress.js presentations from reStructuredText
long_description = file: README.rst, CONTRIBUTORS.txt, CHANGES.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Multimedia :: Graphics :: Presentation
    Topic :: Text Processing
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
keywords = presentations,restructuredtext
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/regebro/hovercraft
license = MIT

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    setuptools
    docutils >= 0.9
    lxml>=3.1.0
    svg.path
    pygments
    watchdog
tests_require =
    manuel
test_suite = tests
python_requires = >= 3.5

[options.packages.find]
exclude =
    ez_setup
    examples
    tests

[options.entry_points]
console_scripts =
  hovercraft = hovercraft:main

[flake8]
max-line-length=120
